--- a/_posts/2024-04-20-yoga.md
+++ b/_posts/2024-04-20-yoga.md
@@ -4,7 +4,7 @@ title:  "Stop Doing “Yoga”"
 description: "Everyone can feel there's something anxious about the Western appeal to yoga."
 date:   2024-03-20
 # image:  images/spongebob.gif
-# tags:   [Life]
+tags:   [Essays]
 ---
 
 ![Meditating Patrick.]({{site.baseurl}}/images/spongebob.gif){:style="width: 120%; max-width: 120%; margin-left: -10%"}
