Link color, favico

--- a/_posts/2024-04-24-poem.md
+++ b/_posts/2024-04-24-poem.md
@@ -4,7 +4,7 @@ title:  "<i>Rêveries</i>"
 description: "A poem about childhood."
 date:   2024-03-20
 # image:  images/spongebob.gif
-tags:   [Poems]
+tags: [poems]
 ---
 
 Here is a poem.
