Italic title etc

--- a/_posts/2024-04-24-poem.md
+++ b/_posts/2024-04-24-poem.md
@@ -1,7 +1,8 @@
 ---
 layout: post
 title:  "<i>Rêveries</i>"
-description: "A poem about childhood."
+# description: "A poem about childhood."
+description: ""
 date:   2024-03-20
 # image:  images/spongebob.gif
 tags: [poems]
