--- a/_posts/2024-04-24-poem.md
+++ b/_posts/2024-04-24-poem.md
@@ -1,6 +1,7 @@
 ---
 layout: post
-title:  "<i>Rêveries</i>"
+title: "Rêveries"
+italic: true
 # description: "A poem about childhood."
 description: ""
 date:   2024-03-20
