--- a/_posts/2024-04-20-yoga.md
+++ b/_posts/2024-04-20-yoga.md
@@ -1,7 +1,7 @@
 ---
 layout: post
-title:  "Stop Doing “Yoga”"
-description: "There's something <i><b>anxious</b></i> about the Western appeal to yoga."
+title:  "yoga & “yoga”"
+description: "There's something <i>off</i> about the Western appeal to yoga."
 date:   2024-03-20
 # image:  images/spongebob.gif
 tags: [essays]
@@ -9,7 +9,7 @@ tags: [essays]
 
 ![Meditating Patrick.]({{site.baseurl}}/images/spongebob.gif){:style="width: 120%; max-width: 120%; margin-left: -10%"}
 
-I think we can all feel there's something ***anxious*** about the Western appeal to yoga. That half of the cargo was somehow lost on the boat-trip from India, inadvertently leaving us with all of the gymnastics and none of the spirit. But many of us keep practicing yoga as if it were just another fitness routine, another stress-relief technique, another form of relaxation after a long day at work – another way to improve. (Hello, mindfulness!) The average yoga class is packed with athletes of productivity, mid-life crises, digital nomads, single men, gurus of optimisation, and retired women... In need for a break from neurosis. Or from the contradictions of consumer society. In search for a peace of mind, for happiness, for meaning.
+I think we can all feel there's something ***off*** about the Western appeal to yoga. That half of the cargo was somehow lost on the boat-trip from India, inadvertently leaving us with all of the gymnastics and none of the spirit. But many of us keep practicing yoga as if it were just another fitness routine, another stress-relief technique, another form of relaxation after a long day at work – another way to improve. (Hello, mindfulness!) The average yoga class is packed with athletes of productivity, mid-life crises, digital nomads, single men, gurus of optimisation, and retired women... In need for a break from neurosis. Or from the contradictions of consumer society. In search for a peace of mind, for happiness, for meaning.
 
 I feel you. I'm searching, too – because we have grown up thinking these things are to be found outside of our minds. In the next job, relationship, hobby, purchase. That we are on the cusp of finally and fully relaxing – we just need to get this done, to get this sorted, and then we'll be fine! Yet the root teachings of yoga are crystal-clear. Here are the opening lines of the Yoga Sutras of Patanjali:
 
