--- a/_posts/2024-04-24-dance.md
+++ b/_posts/2024-04-24-dance.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Coming & Going"
+title: "coming-from & going-to"
 description: ""
 date:   2024-03-24
 # image:  images/spongebob.gif
