--- a/_posts/feelings/2024-06-11-nuages.md
+++ b/_posts/feelings/2024-06-11-nuages.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "À l'envers des nuages"
+title: "à l'envers des nuages"
 description: ""
 date: 2024-06-11
 # image: images/spongebob.gif
