--- a/_posts/feelings/2024-06-18-wildness.md
+++ b/_posts/feelings/2024-06-18-wildness.md
@@ -33,4 +33,4 @@ in the immense -- in the wildness of the air.
  
 ---
 
-**Thank-you.** To all beings who have encouraged me to write. To Kits, above all.
+**Thank-yous.** To all beings who have encouraged me to write. To Kits, above all.
