--- a/_posts/feelings/2024-07-01-diptyque.md
+++ b/_posts/feelings/2024-07-01-diptyque.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title: "Diptyque"
+title: "le trèfle s'envolera"
 description: ""
 date: 2024-07-01
 # image: images/spongebob.gif
@@ -23,8 +23,8 @@ Mais nous *devons* imaginer que nos étoiles sont terres promises --
   
 Car l'esprit est la toile de *toutes* nos peintures.  
 De tous nos songes. Il sera notre cité en miniature,  
-Comme nos vertèbres, sont les poutres, de l'ossature...  
-Arborons, une fois pour toutes, l'accueillante posture.  
+Comme nos vertèbres, sont les poutres, de l'ossature --  
+Arborons, une fois pour toutes, la juste posture.  
   
 Oui -- le trèfle s'envolera venue la bise.  
 Mais aujourd'hui, cueillons-le. (Et ne croyons pas au lendemain.)  
@@ -42,8 +42,8 @@ Et tout près du couchant... On s'abandonnera
 aux saveurs des dernières secondes.  
   
 (à la douceur des dernières couleurs.  
-aux murmures des derniers danseurs...  
-au coin de la rue, au coin de la nuit...  
+aux murmures des derniers danseurs.  
+au coin de la rue, au coin de la nuit.  
 là où s'éteignent les lueurs.)  
 
 ---
@@ -78,16 +78,16 @@ En pommade, en beurre, en remède, en miel.
 En provision pour le givre de l'hiver solennel.  
   
 Ainsi, nous imaginerons, dans le rocher inébranlable,  
-Le sable.  
+le sable.  
 Et dans le sable, que dans le feu nous soufflerons,  
-Le verre.  
+le verre.  
 Et dans le verre, autrefois impénétrable,  
-Le miroir.  
+le miroir.  
 Et dans le miroir --  
-Nous nous reconnaîtrons.  
+nous nous reconnaîtrons.  
 
 ---
 
-**Merci.** Le 2ème vers de la 4ème strophe du 1er volet est inspiré du vers d'Horace, « carpe diem, quam minimum credula postero. »  Le 4ème vers de la 1ère strophe du 2ème volet est une citation directe de l'article Wikipédia sur le souci officinal. Merci à la personne secrète qui en est l'autrice -- vous êtes d'une finesse !
+**Mercis.** Le 2ème vers de la 4ème strophe du 1er volet est inspiré du vers d'Horace, « carpe diem, quam minimum credula postero. »  Le 4ème vers de la 1ère strophe du 2ème volet est une citation directe de l'article Wikipédia sur le souci officinal. Merci à la personne secrète qui en est l'autrice -- vous êtes d'une finesse !
 
 **P.S.** Les latins appellent aussi le souci officinal « calendula », de « petit calendrier », car ses capitules se déploient avec l'apparition du soleil. J'aurais aimé inclure cette joyeuse étymologie dans le poème.
