--- a/_posts/feelings/2024-07-02-we-will.md
+++ b/_posts/feelings/2024-07-02-we-will.md
@@ -72,5 +72,5 @@ not-speaking. soft-spoken.
 
 ---
 
-**Thank-you.** I cannot remember where or when I wrote this one. The « tears from the nose » are my little brother's -- the only time that I ever saw him cry. Thank you for your always-presence in my life.
+**Thank-yous.** I cannot remember where or when I wrote this one. The « tears from the nose » are my little brother's -- the only time that I ever saw him cry. Thank you for your always-presence in my life.
 <!-- The « rock that is like a dry weight » is a sensation I used to have regularly as a teenager, usually on the schoolbus. The « eight-figures beneath the cot » refer to dreams/insomnia I had when obsessing over mathematical problems in college. -->
